<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:padding="8dp"
    android:theme="@style/Theme.MaterialComponents.Light">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/input_user_profile_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:text="@string/generated_ppid_2345867" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_profile_name"
            app:boxBackgroundMode="outline">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_user_profile_name"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:textColorHint="#546E7A" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.8"
            android:text="@string/assigned_isp_profile"
            android:textColor="@color/bl" />

        <androidx.appcompat.widget.AppCompatSpinner
            android:id="@+id/isp_select_add_user_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="8dp"
            android:alpha="0.5"
            android:background="@color/bl" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.8"
            android:text="@string/input_argument_values"
            android:textColor="#007575" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/login_argument_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.8"
            android:text="@string/logout_arguments"
            android:textColor="#750075" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/logout_argument_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.8"
            android:text="@string/login_headers"
            android:textColor="#757500" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/login_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:alpha="0.8"
            android:text="@string/logout_headers"
            android:textColor="@color/bl" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/logout_header_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>