<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="4dp"
    android:layout_marginEnd="4dp"
    android:layout_marginTop="2dp"
    android:layout_marginBottom="2dp"
    android:theme="@style/Theme.MaterialComponents.Light"
    app:cardCornerRadius="2dp"
    app:cardUseCompatPadding="true"
    app:cardElevation="2.4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_rect_white">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutCompat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:orientation="vertical"
            android:paddingEnd="60dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/select_profile"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/profile_name_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:fontFamily="@font/proxima_asi_b"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/RED_X"
                tools:text="Profile1" />

            <TextView
                android:id="@+id/isp_name_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="@font/mosk"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/graph_end"
                tools:text="SITI Broadband" />

            <TextView
                android:id="@+id/profile_id_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/bl"
                tools:text="PPID : 0" />

            <TextView
                android:id="@+id/p_pid_for_isp_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@color/bl"
                tools:text="ISP PPID : 0" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/edit_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/proxima_asi_b"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/edit"
                    app:drawableStartCompat="@drawable/ic_edit_profile" />

                <TextView
                    android:id="@+id/delete_profile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:drawablePadding="8dp"
                    android:fontFamily="@font/proxima_asi_b"
                    android:gravity="center_vertical"
                    android:padding="8dp"
                    android:text="@string/delete"
                    app:drawableStartCompat="@drawable/ic_delete" />
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <FrameLayout
            android:id="@+id/select_profile"
            android:layout_width="wrap_content"
            android:layout_height="250dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.5">

            <TextView

                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_rect_other"
                android:drawablePadding="4dp"
                android:fontFamily="@font/proxima_asi_b"
                android:gravity="center_vertical"
                android:padding="8dp"
                android:text="@string/select"
                android:textColor="@color/wh"
                app:drawableEndCompat="@drawable/ic_select"
                app:drawableTint="@color/wh" />
        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>

